Fixed techniques grid now not fitting on mobiles

--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ blockquote::before {
   margin: 1em auto 2em auto;
   max-width: calc(100vw - 4em); /* the em figure comes from the body and container's margins and padding + grid gap */
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(28ch, 1fr)); /* 28ch is the number of characters without a space between them, so browsers don't put new lines in weird, hard-to-read places */
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-auto-rows: 1fr;
   gap: 1em;
 }
@@ -530,6 +530,8 @@ blockquote::before {
 
 #files a {
   display: inline-block;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
   text-align: center;
 }
 
@@ -717,9 +719,10 @@ blockquote::before {
 
 /********** Media queries **********/
 
-@media screen and (min-width: 540px) {
-  #files a+a {
-    margin-left: 1em;
+@media screen and (min-width: 500px) {
+  #about ul {
+    grid-template-columns: repeat(auto-fit, minmax(28ch, 1fr));
+    /* 28ch is the number of characters without a space between them, so browsers don't put new lines in weird, hard-to-read places */
   }
 }
 
